--- a/各种数据类型解析.md
+++ b/各种数据类型解析.md
@@ -4,13 +4,25 @@
 
 ###### length属性：
 
+数组的长度
+
 length++可将数组末尾添加一个undefined，也可以通过ary[num]的方式添加，如果num大于ary.length，则中间用undefined补位
 
 length--可将数组最后一项删除
 
+[数组Array方法](./数组的方法.md)
+
+[常见的几种数组排序算法JS实现](http://www.cnblogs.com/ZxrGloria/p/5316969.html)
+
+[JS数组排序技巧汇总(冒泡、sort、快速、希尔等排序)](http://www.jb51.net/article/75355.htm)
+
 ### String
 
+###### length属性：
 
+字符串的长度，字符串可通过索引值来获取具体的某一个字符
+
+[字符串String方法](./字符串的方法.md)
 
 ### Undefined
 
@@ -19,6 +31,8 @@ length--可将数组最后一项删除
 函数中的形参定义了但是没有传值，则为undefined
 
 当函数没有写返回值的时候，默认返回undefined
+
+变量声明后没有赋值则为undefined
 
 ### Function
 
